Style fix